<resources>

    <string name="app_name">WeathCheck</string>
    <string name="current_weather">Current Weather</string>
    <string name="weather_forecast">Weather Forecast</string>

    <!--Location preferences values-->
    <string name="longitude_Label">Longitude</string>
    <string name="longitude_key">lon</string>
    <string name="longitude_default">2.3</string>

    <string name="latitude_Label">Latitude</string>
    <string name="latitude_key">lat</string>
    <string name="latitude_default">2.3</string>

    <!--Setting Activity - Preferences fragment items' strings-->
    <string name="settings_activity_label">Settings</string>

    <string name="units_label">Choose Unit</string>
    <string name="units_key">units</string>
    <string name="units_default">@string/units_metric_value</string>

    <string name="units_standard_label">Standard</string>
    <string name="units_standard_value">standard</string>

    <string name="units_metric_label">Metric</string>
    <string name="units_metric_value">metric</string>

    <string name="units_imperial_label">Imperial</string>
    <string name="units_imperial_value">imperial</string>
    <string name="title_activity_settings">Settings</string>
    <string name="adress">London, UK</string>
    <string name="humidity">Humidity</string>
    <string name="currently_loading_data">Currently Loading Data...</string>
    <string name="no_connection_string">OOPS! Seems like you\'re offline :(\nPlease check your connection and try again</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="time_measured">Time Measured</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>

</resources>
