<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/loading_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/loading_progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/loading_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loading_progressBar"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"
                android:text="@string/currently_loading_data"
                android:textAlignment="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/no_connection_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_connection_string"
            android:textAlignment="center" />

        <RelativeLayout
            android:id="@+id/current_weather_main_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center">


            <TextView
                android:id="@+id/current_weather_location_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAllCaps="true"
                android:textSize="24sp"
                tools:text="London, UK" />

            <LinearLayout
                android:id="@+id/current_weather_type_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_weather_location_textView"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/current_weather_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/screen_background_dark_transparent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/weather_type_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        tools:text="Clear" />

                    <TextView
                        android:id="@+id/weather_description_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Sunny Day" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/current_weather_type_linear_layout"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/temperature" />

                    <TextView
                        android:id="@+id/current_temperature_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="16 c" />
                </LinearLayout>

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/current_pressure_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="10 kPa" />
                </LinearLayout>

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/current_humidity_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="75%" />
                </LinearLayout>

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/wind_speed" />

                    <TextView
                        android:id="@+id/current_wind_speed_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="10 kph" />
                </LinearLayout>

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/wind_direction" />

                    <TextView
                        android:id="@+id/current_wind_direction_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="10 deg" />
                </LinearLayout>

                <LinearLayout style="@style/current_weather_info_linearLayout">

                    <TextView
                        style="@style/current_weather_info_labels_textView"
                        android:text="@string/time_measured" />

                    <TextView
                        android:id="@+id/current_measuring_time_value_textView"

                        style="@style/current_weather_info_values_textView"
                        tools:text="2017-02-16 12:00:00" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>